@@ -7,3 +7,5 @@ HelpMePlay | 1.0.10
 		- Added more dialogs from Zereth Mortis.
 	Fixes:
 		- Fixed dialogs that previously worked on Exile's Reach.
+		- Fixed an issue preventing the addon from auto placing the Barracks in the Garrison under suspicious circumstances.
+		- The addon should once again auto close the Architect table in the Garrison after placing the Barracks.
